--- a/templates/directions.html
+++ b/templates/directions.html
@@ -160,7 +160,7 @@
                 const route = directions.routes[0];
                 const geoJSON = polyline.toGeoJSON(route.overview_polyline.points);
 
-                // Remove existing route if it exists
+                // Xóa tuyến đường hiện tại nếu tồn tại
                 if (map.getLayer('route')) {
                     map.removeLayer('route');
                 }
@@ -168,7 +168,7 @@
                     map.removeSource('route');
                 }
 
-                // Add new route
+                // Thêm tuyến đường mới
                 map.addSource('route', { 'type': 'geojson', 'data': geoJSON });
                 map.addLayer({
                     'id': 'route',
@@ -178,7 +178,7 @@
                     'paint': { 'line-color': '#1e88e5', 'line-width': 8 }
                 }, firstSymbolId);
 
-                // Fit the map to the route bounds
+                // Điều chỉnh bản đồ để hiển thị toàn bộ tuyến đường
                 const bounds = new goongjs.LngLatBounds();
                 geoJSON.coordinates.forEach(coord => {
                     bounds.extend(coord);
@@ -209,35 +209,3 @@
             markers = [];
 
             Promise.all([getCoordinates(originAddress), getCoordinates(destinationAddress)])
-                .then(([origin, destination]) => {
-                    const originMarker = new goongjs.Marker({ color: 'blue' })
-                        .setLngLat([origin.lng, origin.lat])
-                        .addTo(map);
-                    const destinationMarker = new goongjs.Marker({ color: 'red' })
-                        .setLngLat([destination.lng, destination.lat])
-                        .addTo(map);
-
-                    markers.push(originMarker, destinationMarker);
-                    getDirections(origin, destination, vehicle);
-                })
-                .catch(error => alert('Error: ' + error.message));
-        });
-
-        document.getElementById('getCurrentLocation').addEventListener('click', () => {
-            geolocateControl.trigger();
-        });
-
-        geolocateControl.on('geolocate', (e) => {
-            const { latitude, longitude } = e.coords;
-            reverseGeocode(latitude, longitude)
-                .then(address => {
-                    document.getElementById('origin').value = address; // Set the address to the "Origin" input field
-                })
-                .catch(error => alert('Error: ' + error.message));
-        });
-
-    });
-
-</script>
-</body>
-</html>
