--- a/WebDA-NewBranch/templates/main.html
+++ b/WebDA-NewBranch/templates/main.html
@@ -755,11 +755,8 @@
 									<div class="vc_column-inner">
 										<div class="wpb_wrapper">
 											<div class="ct-icon-box feature_home"><i class="icon_set_1_icon-30"></i>
-												<h4 style="text-align: center; font-weight: bold;"><b>Giá rẻ</b>, chất
-													lượng</h4>
-												<p class="">Cung cấp dịch vụ giá rẻ và
-													chất lượng luôn mang đến cho du khách những trải nghiệm đầy đủ và
-													tuyệt vời nhất</p>
+												<h4 style="text-align: center; font-weight: bold;"><b>Tiện ích</b> chỉ đường</h4>
+												<p class="">Cung cấp bản đồ tích hợp tiện lợi, du khách có thể dễ dàng di chuyển giữa các địa điểm không chỉ trong quận Hoàn Kiếm</p>
 												<p><a class="btn_1 outline"
 														href="#place-container">Chi tiết</a>
 												</p>
@@ -773,7 +770,7 @@
 											<div class="ct-icon-box feature_home"><i class="icon_set_1_icon-57"></i>
 												<h4 style="text-align: center; font-weight: bold;"><b>Hỗ
 														trợ</b> 24/7/365</h4>
-												<p class="">Với chatbot giúp du khách có thể nhận được sự hỗ trợ và tư vấn ngay lập tức mọi lúc, mọi nơi.</p>
+												<p class="">Với chatbot tiện lợi, giúp du khách có thể nhận được sự hỗ trợ và tư vấn ngay lập tức mọi lúc, mọi nơi.</p>
 												<p><a class="btn_1 outline"
 														href="#S">Chi tiết</a>
 												</p>
